# nnfluxnu

./: .gitignore  README.md  pyproject.toml
ML_fit_enu/: README.md  pyproject.toml
ML_fit_enu/src/ML_fit_neutrinos/: MC_data_reps.py  binning.py  chi_square.txt  chi_squares_for_postfit.txt  comparison_bsm_elec_epos_run3.py  comparison_bsm_elec_fnu.py  comparison_bsm_epos_run3.py  comparison_plots_elec_gens.py  comparison_plots_elec_geoms.py  comparison_plots_elec_obs.py  events.txt  faser_fit.py  fits_faser_mu.py  form_loss_fct.py  lhapdf_grid.py  logspace_grid.py  neutrino_pdf_plot.py  plot_all_l2_cl_elec.py  postfit_measures.py  read_faserv_pdf.py  read_fk_table.py  rebin_data.py  rebin_data_like_faser.py  remove_befote_pull.sh  run_bsm.sh  run_plots.sh  test.py  test_plot_fluxes.py
ML_fit_enu/src/ML_fit_neutrinos/2024_faser/: change_fk.sh  plot_dpm_vs_faser.py  plot_epos_all_obs.py
ML_fit_enu/src/ML_fit_neutrinos/data/: pwgLHEF_analysis-0001-W1.top
ML_fit_enu/src/ML_fit_neutrinos/elec_bsm_eta/: data_dpmjet.py
ML_fit_enu/src/ML_fit_neutrinos/elec_bsm_eta_prime/: data_dpmjet.py
ML_fit_enu/src/ML_fit_neutrinos/elec_bsm_pi/: data_dpmjet.py  plot_dpmjet.py
ML_fit_enu/src/ML_fit_neutrinos/elec_faserv2/: plot_epos_all_obs.py
ML_fit_enu/src/ML_fit_neutrinos/electron_results/: plot_all_l2_cl_elec.py
ML_fit_enu/src/ML_fit_neutrinos/faserv2/: change_binning.sh  change_fk.sh
ML_fit_enu/src/ML_fit_neutrinos/fit_bsm_eta/: chi_square.txt  data_dpmjet.py  events_mu.txt  events_mub.txt  fit_file.py  mu_pdf.txt  plot_dpmjet.py  training_lengths.txt
(+14059 files in other folders)
