[tool.poetry]
name = "ml-fit-neutrinos"
version = "0.1.0"
description = ""
authors = ["Jukka John <49348597+JukkaJohn@users.noreply.github.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "<2"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scipy = "^1.14.1"

[tool.uv.sources]
torch = { index = "pytorch_cpu" }
torchvision = { index = "pytorch_cpu" }

[[tool.uv.index]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
